src/objects/Contact_Details__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Details_Value__c</fullName>
        <formula>IF( Phone__c != null, Phone__c, Note__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Details Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Details</relationshipLabel>
        <relationshipName>Contact_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_s_Department__c</fullName>
        <defaultValue>$Setup.ConstantsH__c.Department__c</defaultValue>
        <label>Owner&apos;s Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Departmental</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Private Contact Details</label>
    <nameField>
        <label>Contact Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Private Contact Details</pluralLabel>
    <recordTypes>
        <fullName>Note</fullName>
        <active>true</active>
        <label>Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone</fullName>
        <active>true</active>
        <label>Phone</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>